# AIMotionLab-Virtual

./: .gitignore  BuildingInputGui.py  CodeDocumentation.md  DroneNameGui.py  MUJOCO_LOG.TXT  NatNetClient.py  PythonSample.py  README.md  Tutorial.md  build_scene.py  building_positions.txt  built_scene.xml  camera_follow_drone.py  combined_data.txt  drone_passive_simulation.py  drone_passive_simulation_NatNet.py  mujocoHelper.py  naming_convention_in_xml.txt  notes.txt  pole_positions.txt  pyproject.toml  radar_scenario.config  reloadScene.py  requirements.txt  scene.xml  server_test_message00.txt  setup.py  testEnvironment.xml  testEnvironment_4drones.xml  velocities.csv  xml_generator.py
3d_models/: lagyi_cockpit.stl  lagyi_fal1.stl  lagyi_oszlop4.stl
Demo/: cues.json  show.json
aiml_virtual/: __init__.py  display.py  renderer.py  scene.py  simulator.py  skyc_viewer.py  utils.py  video_renderer.py  visualize.py
aiml_virtual/airflow/: __init__.py  airflow_sampler.py  airflow_target.py  box_dictionary.py  cuboid_array.py  utils.py  wind_sampler.py
aiml_virtual/controller/: __init__.py  bicycle_controller.py  car_controller.py  car_lpv_controller.py  controller.py  controller_base.py  cuboid_array.py  differential_flatness.py  drone_geom_control.py  drone_geom_controller.py  drone_lqr_control.py  hooked_drone_lq_control.py
aiml_virtual/gui/: __init__.py  building_input_gui.py  (+2 more)
classes/: active_simulation.py  airflow_sampler.py  bezier_traj.py  bicycle.py  car.py  car_classes.py  controller_base.py  drone.py  moving_object.py  mujoco_display.py  object_parser.py  passive_display.py  payload.py  pressure_sampler.py  remote_trajectory.py  skyc_traj.py  skyc_traj_eval.py  test_friction.py  trajectory.py  trajectory_base.py
f1tenth_measurements/: motion_2023-03-03-12-20-33.csv  motion_2023-03-03-12-22-06.csv
gui/: building_input_gui.py  cargo_input_gui.py  drone_input_gui.py  drone_name_gui.py  payload_input_gui.py  vehicle_input_gui.py  vehicle_name_gui.py
meshes/: ccw_propeller_simplified.stl  cw_propeller.stl  cw_propeller_simplified.stl  quad_model_no_prop.stl  quad_model_no_prop_simplified.stl
scripts/: active_simulation.py  bezier_curv.py  build_scene.py  camera_follow_drone.py  client_many_drones.py  display_mocap.py  drone_passive_simulation.py  drone_passive_simulation_NatNet.py  f1t_trailer.py  gen_hookupseq_xml.py  glfw_bug_minimal_example.py  hooked_bumblebee.py  load_and_display_scene.py  mocap.py  mujoco_display.py  payload_transport_airflow.py  radar_scenario_parse.py  reload_scene.py  remote_trajectory_client.py  rigidbumblebee.py  sample_simulation.py  shift_flow_vel_acc.py  shift_flow_vel_acc_from_1file.py  shift_flow_vel_acc_from_2file.py  shift_flow_vel_acc_from_file.py  shift_pressure_data.py  shift_pressure_data_from_1file.py  shift_pressure_data_from_2file.py  shift_pressure_data_from_file.py  simulate_dummies.py  skyc_demo.py  skyc_example.py  skyc_example.skyc  skyc_player.py  skyc_trajectory.py  tcp_server.py  teardrop_stl.py  terrain_display.py  terrain_display_tiny.py  test_active_simulator.py  (+18 more)
util/: __init__.py  mujocoHelper.py  mujoco_helper.py  util.py  xml_generator.py
xml_models/: Scene.xml  bicycle.xml  built_scene.xml  built_scene_3loads.xml  built_scene_fly.xml  built_scene_nov_29.xml  car_obstackle_scene.xml  common_assets.xml  empty_checkerboard.xml  empty_scene.xml  example_scene_4.xml  example_scene_5.xml  hook_scenario_3_loads.xml  scene.xml  scene_base.xml  scene_base_indoor_hfield.xml  scene_base_terrain.xml  scene_base_terrain_tiny.xml  scene_without_walls.xml  testEnvironment.xml  test_scene.xml  this_worked_w_hook_up_seq.xml
(+342 files in other folders)
