[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiml_virtual"
version = "1.1.0"
description = "TODO"
# The versions in comments definitely work, but they are only meant to
# be a reference: other version combinations may also work fine.
dependencies = [  # python 3.10
    "matplotlib",  # 3.6.0
    "motioncapture", # 1.0a2
    "mujoco", # 3.2.2
    "numpy", # 1.23.3
    "scipy", # 1.10.1
    "sphinx",  # 8.0.2
    "furo", # 2024.8.6
    "win-precise-time; sys_platform=='win32'", # 1.4.2
    "skyc_utils @ git+https://github.com/AIMotionLab-SZTAKI/skyc_utils.git@rework",  # 2.0.0
    "opencv-python", # 4.10.0.84
    "cyipopt; sys_platform != 'win32'", # 1.5.0, for MPCCCar
    "casadi", # 3.6.4, for MPCCCar
    "pyyaml", # 6.0.2, for MPCCCar
    "pandas", # 2.2.3
    "networkx", # 3.4.2
    "numpy-stl" # 3.1.1
]
readme = "readme.md"

[tool.setuptools]
packages = { find = { include = ["aiml_virtual", "aiml_virtual.*"] } }
py-modules = []
include-package-data = true

[tool.setuptools.package-data]
aiml_virtual = ["resources/**/*"]